--- a/index.html
+++ b/index.html
@@ -199,7 +199,11 @@
         p, li {
             color: white;
             font-family: 'Times New Roman', Times, serif;
-            font-size: larger;
+            font-size: 1.25em;
+        }
+
+        a {
+            color: rgb(0, 221, 255);
         }
 
     </style>
