--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <p><strong>Comments: </strong>Of the ratings for most favorite classes, about half is attributed to Art and half is attributed to the combination of STEM and Humanities. However, for least favorite ratings, STEM and Humanities take the lead with 89% of the least favorite ratings, leaving Art as the least least favorite class.</p>
         <div style="padding: auto; margin: auto;" id="gauges"></div>
         <h3 style="color: white;">Let's get mean</h3>
-        <p>Looking at the mean ratings for each class, STEM and Humanities both scored a whopping 2.13⭐ rating, but coming in the lead, Art wins by 20% with the high score of 2.56⭐.</p>
+        <p>Looking at the mean ratings for each class, STEM and Humanities both scored a whopping score of 2.13/3 ⭐, but coming in the lead, Art wins by 20% with the high score of 2.56/3⭐.</p>
     </div>
     <h2>The Results are in...</h2>
     <div class="vbox">
